--- a/package.json
+++ b/package.json
@@ -12,29 +12,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "immer": "^10.0.1",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.0"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-transition-group": "^4.4.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-transition-group": "^4.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
+    "eslint": "^8.42.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
-    "vite": "^4.3.1"
+    "vite": "^4.3.9"
   },
   "prettier": "./.prettierrc.json"
 }
