--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,9 @@
 {
-  "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 100
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
